--- a/src/app/shared/components/input-footer/input-footer.component.scss
+++ b/src/app/shared/components/input-footer/input-footer.component.scss
@@ -2,10 +2,10 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: 0.5rem;
+  margin-top: var(--space-2);
 }
 
 .input-char-count {
-  font-size: 0.875rem;
-  color: var(--color-text-tertiary);
+  font-size: var(--font-size-sm);
+  color: var(--color-text-muted);
 }
